<resources>
    <string name="app_name">TruTrace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="camera_use_still_shot">Save Image</string>
    <string name="camera_confirm_shot">Confirm</string>
    <string name="camera_retake">Retry</string>
    <string name="username_field_hint">Username</string>
    <string name="password_field_hint">Password</string>
    <string name="password_failed_message">Please Check your credentials</string>
    <string name="login_button">Login</string>
    <string name="profile_update_password_change_button">Change Password</string>
    <string name="profile_update_password_cancel_change_button">Cancel</string>
    <string name="profile_update_password_text_header">Change Password</string>
    <string name="profile_update_password_button_cancel">Cancel</string>
    <string name="profile_update_password_button_save">Save</string>
    <string name="profile_update_error_passwords_do_not_match">Your Passwords Do Not Match</string>
    <string name="profile_update_error_passwords_cannot_be_empty">Password Is Empty</string>
    <string name="profile_update_email_text_header">Change Email</string>
    <string name="profile_update_error_email_wrong_format">The Email Address provided is invalid format</string>
    <string name="profile_update_nickname_text_header">Change Nickname</string>
    <string name="profile_update_phone_number_text_header">Change Phone Number</string>
    <string name="profile_update_lineid_text_header">Change LIneId</string>
    <string name="profile.email.header">Email</string>
    <string name="profile.phone.header">Phone Number</string>
    <string name="profiler.lineid.header">LineId</string>
    <string name="profile.nickname.header">nickname</string>
    <string name="profile.password.header">password</string>
    <string name="home_menu_option">Home</string>
    <string name="my_documents_menu_option">My Documents</string>
    <string name="profile_menu_option">Profile</string>
    <string name="search_menu_option">Search</string>
    <string name="settings_menu_option">Settings</string>
    <string name="language_menu_option">Language</string>
    <string name="logout_menu_option">Logout</string>
    <string name="mcpd_document_type">Bill of Lading</string>
    <string name="fishing_logbook_document_type">Fishing Log Book</string>
    <string name="ship_license_document_type">Ship License</string>
    <string name="feed_lot_sheet_document_type">Feed Lot Trace</string>
    <string name="fishmeal_lot_traceability_document_type">Fishmeal Lot Trace</string>
    <string name="captain_statement_type">Captain Statement</string>
    <string name="movement_document_bill_of_lading">Bill of Lading</string>
    <string name="movement_document_document_type">Movement Document</string>
    <string name="movement_document_crew_documents">Crew Documents</string>
    <string name="movement_document_farm_documents">Farm Documents</string>
    <string name="movement_document_feed_documents">Feed Documents</string>
    <string name="movement_document_fish_meal_documents">Fishmeal Documents</string>
    <string name="vessel_captains_statement">Captains Statement</string>
    <string name="vessel_crew_documents">Crew Documents</string>
    <string name="vessel_dolphin_safe_book">Dolphin Safe Statement</string>
    <string name="vessel_fishing_log_book">Fishing Logbook</string>
    <string name="vessel_fisheries_cert_of_origin">Fisheries Cert of Origin</string>
    <string name="vessel_mcpd">Marine Catch Purchasing Document</string>
    <string name="vessel_port_in_out">Port-In /Port-Out Document</string>
    <string name="vessel_list">Vessel List</string>
    <string name="vessel_driver_license_document">Vessel Driver License</string>
    <string name="port_docking_bill">Docking Bill</string>
    <string name="port_docking_logbook">Docking Logbook</string>
    <string name="port_info_of_conveyance">Info of Conveyance</string>
    <string name="port_crew_documents">Crew Documents</string>
    <string name="port_port_in_out">Port In / Out</string>
    <string name="port_weighing_records">Weighing Record</string>
    <string name="fish_broker_mcpd">MCPD</string>
    <string name="fishmeal_plant_mcpd">Fishmeal MCPD</string>
    <string name="fishmeal_plant_summary_certification">Fishmeal Certification Of Origin</string>
    <string name="fishmeal_plant_supply_chain_doc_foreign_fishmeal">Foreign Fishmeal Documents</string>
    <string name="fishmeal_plant_packing_list_foreign_fishmeal">Fishmeal Packing List</string>
    <string name="fishmeal_plant_captain_statement">Captain Statement</string>
    <string name="fishmeal_plant_dolphin_safe_statement">Dolphin Safe Statement</string>
    <string name="fishmeal_plant_fisheries_cert_of_origin">Fisheries Certification Of Origin</string>
    <string name="fishmeal_broker_fishmeal_mcpd">Fishmeal MCPD</string>
    <string name="feed_mill_feed_lot_shipping_documents">Feed Lot Shipping Document</string>
    <string name="feed_mill_feed_ingredient_list">Feed Ingredient List</string>
    <string name="feed_mill_fishmeal_supplychain_document">Fishmeal Supply Chain Doc</string>
    <string name="feed_mill_fishmeal_packing_list">Fishmeal Packing List</string>
    <string name="feed_mill_fishmeal_summary_certification">Fishmeal Summary Cert</string>
    <string name="feed_mill_lot_traceability">Lot Traceability</string>
    <string name="feed_mill_fishmeal_mcpd">Fishmeal MCPD A,B,C,D</string>
    <string name="feed_broker_feedlot_shipping_documents">Feed Lot Shipping Doc</string>
    <string name="hatchery_fry_movement_document">Fry Movement Document</string>
    <string name="hatchery_good_aquaculture_practices">Good Aquaculture Practices Cert</string>
    <string name="farm_fry_movement_document">Fry Movement Doc</string>
    <string name="farm_movement_document">Movement Document</string>
    <string name="farm_pond_feed_info_sheet">Feed Information Form</string>
    <string name="farm_good_aquaculture_practices_cert">Good Aquaculture Practices Cert</string>
    <string name="farmer_license_tor_bor_document">Farmer License (Tor Bor 1)</string>
    <string name="farm_license_document">Farm License</string>
    <string name="shrimp_broker_movement_document">Movement Document</string>
    <string name="processor_shrimp_lot_traceability">Shrimp Lot Traceability</string>
    <string name="processor_shipping_documents">Shipping Documents</string>
    <string name="processor_bill_of_lading">Bill of Lading</string>
    <string name="processor_commercial_invoice">Commercial Invoice</string>
    <string name="processor_batch_sheet_for_lot_of_shrimp">Shrimp Lot Traceability</string>
    <string name="processor_movement_document">Movement Document</string>
    <string name="dof_labor_certification">DOF Labor Certification</string>
    <string name="farmer_id_card">Farmer ID Card</string>
    <string name="code_of_conduct_document">Code of Conduct</string>
    <string name="hatchery_license_document">Hatchery License</string>
    <string name="vessel_registration_document">Vessel Registration</string>
    <string name="factory_license_document">Factory License</string>
    <string name="importer_bill_of_lading">Bill Of Lading</string>
    <string name="importer_retail_package_document">Retail Package</string>
    <string name="importer_container_loading_report">Container Loading Report</string>
    <string name="processor_phys_org_color_odor_checklist">Phys/Org/Color/Odor Checklist</string>
    <string name="processor_packing_list">Packing List</string>
    <string name="processor_rm_inspect_report">R/M Inspect Report</string>
    <string name="processor_package_inspect_report">Package Inspect Report</string>
    <string name="feed_inspection_document">Feed Inspection</string>
    <string name="feed_pellet_mill_report">Pellet Mill Report</string>
    <string name="feed_production_run_time_document">Production Run time</string>
    <string name="feed_raw_material_report">Raw Material Report</string>
    <string name="logout_dialog_title">Logout Confirmation</string>
    <string name="logout_dialog_text">Please confirm that you wish to logout</string>
    <string name="logout_dialog_button_confirm">Logout</string>
    <string name="logout_dialog_button_cancel">Cancel</string>
    <string name="my_documents_tab_text">My Docs</string>
    <string name="other_documents_tab_text">Doc Feed</string>
    <string name="profile_documents_tab_text">Profile Docs</string>
    <string name="profile_doc_type">Profile</string>
    <string name="passthrough_doc_type">Passthrough</string>
    <string name="error_system_general">System Error</string>
    <string name="error_system_server_connection">Cannot connect to the cloud server. Please make sure you are connected to the internet</string>
    <string name="error_system_unsynced_document">This document has not yet been synced with your device.</string>
    <string name="dialog_general_OK">OK</string>
    <string name="dialog_general_DONE">Done</string>
    <string name="dialog_general_ROTATE">Rotate</string>
    <string name="dialog_general_SAVE">Save</string>
    <string name="menu_settings_about">About Application</string>
    <string name="document_context_menu_delete">Delete Document</string>
    <string name="document_custom_dialog_cancel_heading">Cancel Document Creation</string>
    <string name="document_custom_dialog_cancel_button">CANCEL</string>
    <string name="document_custom_dialog_done_button">SAVE</string>
    <string name="document_custom_dialog_submit_button">SUBMIT</string>
    <string name="document_custom_dialog_cancel_message">Are you sure that you want to cancel the creation of this document?</string>
    <string name="document_custom_dialog_cancel_yes">YES</string>
    <string name="document_custom_dialog_cancel_no">NO</string>
    <string name="document_custom_dialog_cancel_toast_message">Cancelling Document Creation</string>
    <string name="document_custom_dialog_done_toast_message">Creating new document</string>
    <string name="document_custom_dialog_submit_toast_message">Submitting a document</string>
    <string name="document_custom_dialog_new_page_toast_message">Creating a new Page</string>
    <string name="document_custom_dialog_tab_details">Details</string>
    <string name="document_custom_dialog_tab_gallery">Gallery</string>
    <string name="document_custom_dialog_tab_notes">Notes</string>
    <string name="document_custom_dialog_tab_page">Page</string>
    <string name="document_custom_dialog_summary_document_type">Document Type</string>
    <string name="document_custom_dialog_summary_number_of_pages">Number of Pages: </string>
    <string name="document_custom_dialog_summary_owner">Owner</string>
    <string name="document_custom_dialog_creation_timestamp">Timestamp</string>
    <string name="document_custom_dialog_quit_application_heading">Quit Application</string>
    <string name="document_manage_my_documents_filter">Manage My Docs Filter</string>
    <string name="document_tag_management">Manage Tags</string>
    <string name="document_tag_cancel_tagging">Cancel</string>
    <string name="document_tag_save_tagging">Save</string>
    <string name="document_tag_prefix_selection">Select Tag Prefix</string>
    <string name="document_tag_dialog_label_enter_custom_tag">Enter Custom Tag</string>
    <string name="document_linked_document_management">Manage Linked Documents</string>
    <string name="document_attached_document_management">Manage Back-up Documents</string>
    <string name="document_recipients_document_management">Manage Document Recipients</string>
    <string name="document_my_docs_filter_cancel">Cancel</string>
    <string name="document_my_docs_filter_set">Set</string>
    <string name="document_my_docs_filter_clear">Clear</string>
</resources>