<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:tag="CreateNewTagDialog">

    <LinearLayout
        android:id="@+id/linearLayout_bottom_bar"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/buttonDocumentDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:text="@string/document_custom_dialog_cancel_button"
            >
        </Button>
        <Button
            android:id="@+id/buttonDocumentDialogDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/document_custom_dialog_done_button"
            >
        </Button>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout_bottom_bar"
        android:padding="40dp"
        android:layout_alignParentStart="true">

        <Spinner
            android:id="@+id/spinnerTagPrefixes"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:entries="@array/custom_tag_prefixes"
            android:prompt="@string/document_tag_prefix_selection" />

        <EditText
            android:id="@+id/textViewNewCustomTag"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinnerTagPrefixes"
            android:hint="@string/document_tag_dialog_label_enter_custom_tag"
            android:inputType="text" />

    </RelativeLayout>

</RelativeLayout>