<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="?android:attr/scrollbarSize"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginBottom="?android:attr/scrollbarSize"
        android:text="@string/profile_update_password_text_header"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
        android:layout_marginTop="4dp"
        android:layout_marginRight="@dimen/nav_header_vertical_spacing"
        android:textColor="@color/white_text">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="new password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password2EditWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
        android:layout_marginTop="4dp"
        android:layout_marginRight="@dimen/nav_header_vertical_spacing">

        <EditText
            android:id="@+id/editTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="your new password again"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout_bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonPasswordEditCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/profile_update_password_button_cancel"
            android:textColor="@color/teal_background"></Button>

        <Button
            android:id="@+id/buttonPasswordEditSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/profile_update_password_button_save"
            android:textColor="@color/teal_background"></Button>
    </LinearLayout>
</LinearLayout>