<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_grey_custom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <ImageView
            android:layout_width="227dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/truetrace_logo_192_192" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
            android:layout_marginRight="@dimen/nav_header_vertical_spacing"
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/username_field_hint"
                android:textColor="@color/black"
                android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
            android:layout_marginRight="@dimen/nav_header_vertical_spacing"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_below="@id/usernameWrapper"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/password_field_hint"
                android:imeOptions="actionDone"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
            android:layout_marginRight="@dimen/nav_header_vertical_spacing"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/login_button"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/applicationVersionId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="TextView"
        android:textAlignment="viewEnd"
        android:textSize="12sp" />

</LinearLayout>
